gcc/testsuite/rust/rustc/ui/issues/issue-17551.rs
use std::marker;

struct B<T>(marker::PhantomData<T>);

fn main() {
    let foo = B(marker::PhantomData); // { dg-error ".E0282." "" { target *-*-* } }
    let closure = || foo;
}

